--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.5",
     "gatsby": "^4.16.0",
     "gatsby-plugin-image": "^2.17.0",
     "gatsby-plugin-manifest": "^4.17.0",
+    "gatsby-plugin-material-ui": "^4.1.0",
     "gatsby-plugin-mdx": "^3.17.0",
     "gatsby-plugin-sharp": "^4.17.0",
     "gatsby-source-filesystem": "^4.17.0",
     "gatsby-transformer-sharp": "^4.17.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   }
 }
