--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-sharp": "^4.17.0",
     "gatsby-source-filesystem": "^4.17.0",
     "gatsby-transformer-sharp": "^4.17.0",
+    "gatsby-transformer-yaml-full": "^4.0.5",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   }
